# dsr-mod-manager-for-chumps

./: .eslintrc.js  .eslintrc.json  .gitattributes  .gitignore  .prettierrc  .yarnrc.yml  Cargo.toml  LICENSE  README.md  deploy.sh  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
assets/: index.36839e43.js  index.5ff0fc3f.css  vendor.875c5ecf.js
config/: paths.ts  webpack.common.config.ts  webpack.dev.config.ts  webpack.prod.config.ts
config/webpack/: module_rules.ts  plugins.ts
docs/: Dev_Setup.md  Interesting_Discoveries.md  Mod_Config_File.md  Sound_Mod_Stuff.md  UI_Framework_Decision.md  index.html
docs/assets/: index.1edf302e.js  vendor.bbaf6c22.js
frontend/: .eslintrc.js  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.css  App.tsx  ItemList.tsx  index.css  index.tsx
frontend/src/components/: ActionButtons.tsx  InfoPane.tsx  ItemCard.tsx  ItemList.tsx  ModList.css  ModList.tsx  PrimaryButton.tsx
frontend/src/redux/: store.ts
frontend/src/styles/: App.css
frontend/src/utils/: interfaces.ts  tauri.ts  util.ts
src/: App.tsx  components.rs  config.rs  main.rs  tools.rs
src-backup/: components.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.windows.conf.json
src-tauri/src/: commands.rs  main.rs  types.rs  utils.rs
src/components/: ItemCard.tsx  ItemList.tsx
src/styles/: App.css  index.css  index.scss  tailwind.css
src/styles/components/: ItemCard.css  ItemList.css
vite/: vite.common.ts  vite.config.ghpage.ts
(+10 files in other folders)
