[package]
name = "dsr-mod-manager-for-chumps"
version = "0.1.0"
edition = "2018"
repository = "https://github.com/JamesYeoman/dsr-mod-manager-for-chumps"
licence-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = { version = "^1.2", features = ["fltk-bundled"] }
toml = "*"
bitcoin_hashes = "*"
