[package]
name = "dsrbmm"
version = "0.1.0"
description = "Dark Souls Remastered Bulk Mod Manager"
edition = "2021"
rust-version = "1.56"

[build-dependencies]
tauri-build = { version = "1.0.0-beta.4" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-beta.8", features = ["api-all", "dialog-open"] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
